# GameEngineAndGame

./: CMakeLists.txt  Doxyfile  main.cpp  newFile  Отчёт по курсовой Привалов БПМ-21-3.docx
html/: _border_8h_source.html  _bullet_8h_source.html  _concrete_wall_game_object_8h_source.html  _eagle_8h_source.html  _game_8h_source.html  _game_object_interface_8h_source.html  _ice_8h_source.html  _index_buffer_8cpp-example.html  _index_buffer_8h-example.html  _index_buffer_8h_source.html  _level_8h_source.html  _level_interface_8h_source.html  _physics_engine_8h_source.html  _renderer_8h_source.html  _resource_manager_8h_source.html  _shader_manager_8h_source.html  _sprite_8h_source.html  _sprite_animator_8h_source.html  _tank_game_object_8h_source.html  _texture_manager_8h_source.html  _timer_8h_source.html  _trees_8h_source.html  _vertex_array_8h_source.html  _vertex_buffer_8h_source.html  _vertex_buffer_layout_8h_source.html  _wall_game_object_8h_source.html  _water_8h_source.html  annotated.html  class_border-members.html  class_border.html  class_bullet-members.html  class_bullet.html  class_concrete_wall_game_object-members.html  class_concrete_wall_game_object.html  class_eagle-members.html  class_eagle.html  class_game-members.html  class_game.html  class_game_object_interface-members.html  class_game_object_interface.html  (+69 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  (+10 more)
res/: gameResources.json  gameResuorces.json
res/shaders/: fragmentSprite.txt  vertex.txt  vertexSprite.txt
src/: main.cpp
src/EngineSystem/: Timer.cpp  Timer.h
src/Game/: Game.cpp  Game.h  Level.cpp  Level.h  LevelInterface.cpp  LevelInterface.h  SpaceShip.cpp  SpaceShip.h
src/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  TextureManager.cpp  TextureManager.h  (+6 more)
(+24 files in other folders)
